<resources>
    <string name="app_name">SmartTrack</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="social_login">Social Login</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you’ve been missed!</string>
    <string name="email">Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="loginhere">Login here</string>
    <string name="welcome_back_you_ve_been_missede">Welcome back you’ve been missed!</string>
    <string name="Email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_to_explore_the_power_of_smarttrack">Create an Account to explore the power of SmartTrack</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="google_icon">google_icon</string>
    <string name="apple_icon">apple_icon</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="study_planner">Study Planner</string>
    <string name="badges">Badges</string>
    <string name="profile_icon_description">Profile Icon</string>
    <string name="add_a_task">Add a Task</string>
    <string name="task_name">Task Name</string>
    <string name="category">Category</string>
    <string name="add_task">+ Add Task</string>
    <string name="other">Other</string>
    <string name="lab">Lab</string>
    <string name="exam">Exam</string>
    <string name="assignment">Assignment</string>
    <string name="computer_studies">Computer Studies</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="topic_chapter_name">Topic/Chapter Name</string>
    <string name="fri_25_september_2024">Fri 25, September, 2024</string>
    <string name="_09_30am">09:30AM</string>
    <string name="subject">Subject</string>
    <string name="tasks_scroll_view_description" />
    <string name="task_title">Task Title</string>
    <string name="settings">Settings</string>
    <string name="settingsHeader">Settings</string>
    <string name="change_email">Change Email</string>
    <string name="profile">Profile</string>
    <string name="view_or_change_your_profile">View Or Change Your Profile!</string>
    <string name="curremt_email">Curremt Email:</string>
    <string name="settingstext">Settings</string>
    <string name="paswordtext">Pasword</string>
    <string name="profilepage">Profile</string>
    <string name="confrim_changes">Confrim Changes</string>
    <string name="edit_your_task">Edit Your Task</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="cancel_changes">Cancel Changes</string>
</resources>