<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/create_account"
        android:textSize="40sp"
        android:textColor="@color/light_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/create_an_account_to_explore_the_power_of_smarttrack"
        app:layout_constraintEnd_toEndOf="@id/createAccount"
        app:layout_constraintStart_toStartOf="@id/createAccount"
        app:layout_constraintTop_toBottomOf="@id/createAccount" />


    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/input_rounded_edges"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccount"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/input_rounded_edges"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_rounded_edges"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/input_rounded_edges"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeBack"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_rounded_edges"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/confirm_password" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

    <TextView
        android:id="@+id/continueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:textColor="@color/light_green"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/alreadyHaveAccount"
        app:layout_constraintStart_toStartOf="@id/alreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/alreadyHaveAccount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facebook_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook_icon"/>

        <ImageView
            android:id="@+id/apple_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/apple"
            android:contentDescription="@string/apple_icon"/>

        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/google"
            android:contentDescription="@string/google_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
