<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Category Section -->

    <TextView
        android:id="@+id/editTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/edit_your_task"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@id/editTaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryHeader"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipClass"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:text="Class"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:chipBackgroundColor="@color/light_green"
            app:chipCornerRadius="16dp"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipExam"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/exam"
            app:chipBackgroundColor="@color/red"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLab"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/lab"
            app:chipBackgroundColor="@color/pink"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAssignment"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/assignment"
            app:chipBackgroundColor="@color/orange"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOther"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/other"
            app:chipBackgroundColor="@color/purple"
            style="@style/Widget.MaterialComponents.Chip.Choice" />
    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/subjectInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:hint="@string/subject"
        android:inputType="text"
        android:background="@drawable/input_rounded_edges"
        android:drawableStart="@drawable/file2"
        android:drawablePadding="10dp"
        style="@style/EditTextDarkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupCategory"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/chapterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:inputType="text"
        android:hint="@string/topic_chapter_name"
        android:background="@drawable/input_rounded_edges"
        android:drawableStart="@drawable/bookmark"
        android:drawablePadding="10dp"
        style="@style/EditTextDarkTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectInput"
        app:layout_constraintWidth_percent="0.9" />

    <ImageView
        android:id="@+id/dateIcon"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/calendar"
        app:layout_constraintEnd_toStartOf="@+id/dateText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapterName" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:padding="16dp"
        android:text="@string/fri_25_september_2024"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dateIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateIcon"
        app:layout_constraintTop_toTopOf="@+id/dateIcon" />


    <LinearLayout
        android:id="@+id/timePickerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapterName">

        <ImageView
            android:id="@+id/clockIconEnd"
            android:layout_width="28dp"
            android:layout_height="38dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minutePicker" />

        <NumberPicker
            android:id="@+id/hourPickerStart"
            android:layout_width="wrap_content"
            android:layout_height="85dp" />

        <NumberPicker
            android:id="@+id/minutePickerStart"
            android:layout_width="wrap_content"
            android:layout_height="85dp" />

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="to" />

        <NumberPicker
            android:id="@+id/hourPickerEnd"
            android:layout_width="wrap_content"
            android:layout_height="85dp" />

        <NumberPicker
            android:id="@+id/minutePickerEnd"
            android:layout_width="wrap_content"
            android:layout_height="85dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editTaskButton"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/confirm_changes"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePickerLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="197dp"
        android:layout_height="56dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel_changes"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTaskButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
