<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/loginhere"
        android:textSize="40sp"
        android:textColor="@color/light_green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back_you_ve_been_missede"
        app:layout_constraintEnd_toEndOf="@id/loginTitle"
        app:layout_constraintStart_toStartOf="@id/loginTitle"
        app:layout_constraintTop_toBottomOf="@id/loginTitle" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:background="@drawable/input_rounded_edges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeBack"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/input_rounded_edges"
        app:layout_constraintEnd_toEndOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="@id/emailInput"
        app:layout_constraintTop_toBottomOf="@id/emailInput" />

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Forgot your password?"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/passwordInput" />

    <!-- Remember me -->
    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:text="Remember Me"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        app:layout_constraintVertical_bias="0.935" />

    <!-- Sign in Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_edges"
        android:text="Sign in"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:backgroundTint="@null" />


    <!-- Create new account -->
    <TextView
        android:id="@+id/createNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create new account"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <TextView
        android:id="@+id/continueWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or continue with"
        android:textColor="@color/light_green"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="@id/createNewAccount"
        app:layout_constraintStart_toStartOf="@id/createNewAccount"
        app:layout_constraintTop_toBottomOf="@id/createNewAccount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/continueWith"
        app:layout_constraintStart_toStartOf="@id/continueWith"
        app:layout_constraintTop_toBottomOf="@id/continueWith" >

        <ImageView
            android:id="@+id/facebook_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/apple_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/apple" />

        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="50dp"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:src="@drawable/google" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
